--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ code {
 	display: flex;
 	align-items: center;
 	column-gap: 5px;
+	margin-left: 10px;
 }
 
 .notify-holder {
@@ -122,6 +123,7 @@ code {
 .item-list {
 	display: flex !important;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .none {
@@ -132,20 +134,11 @@ code {
 	float: right;
 }
 
-.theme {
-	position: absolute;
-	top: 0;
-	right: 19px;
-	padding: 10px;
-	background: transparent;
-	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
-	border-radius: 10px;
-}
-
-.theme svg {
-	cursor: pointer;
-}
-
 .container {
 	position: relative;
+}
+
+.date{ 
+	font-size: 8px;
+	color: #333;
 }
